--- a/services/fastapi-service.yaml
+++ b/services/fastapi-service.yaml
@@ -11,4 +11,5 @@ spec:
     - protocol: TCP
       port: 80          # Service port
       targetPort: 8000  # Container port
-  type: ClusterIP
+      nodePort : 32000 
+  type: NodePort
