feat:: add another helm app for fast-api-service

--- a/helms/fast-api-service/templates/deployment.yaml
+++ b/helms/fast-api-service/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: {{ include "fastapi-app.name" . }}
 spec:
-  replicas: 2
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: {{ include "fastapi-app.name" . }}
