update secretPath in helm values

--- a/helms/fast-api-service/test-fast-api-2/values.yaml
+++ b/helms/fast-api-service/test-fast-api-2/values.yaml
@@ -16,7 +16,7 @@ serviceAccount:
 
 vault:
   role: my-app-role
-  secretPath: secret/fastapi
+  secretPath: secret/data/fastapi
 
 nodeSelector: {}
 tolerations: []
