--- a/helms/fast-api-service/test-fast-api/values.yaml
+++ b/helms/fast-api-service/test-fast-api/values.yaml
@@ -15,7 +15,7 @@ serviceAccount:
 
 vault:
   role: my-app-role
-  secretPath: secret/fastapi
+  secretPath: secret/data/fastapi
 
 nodeSelector: {}
 tolerations: []
